tests/tests/snapshots/golden__gen__python__typed-handlers.snap
---
source: tests/tests/golden.rs
expression: project_dump(&project)
---
============================================================
Dockerfile
============================================================
FROM python:3.12-slim

WORKDIR /srv

COPY pyproject.toml ./
RUN pip install --no-cache-dir uv && uv pip install --system -r pyproject.toml

COPY app ./app

EXPOSE 8000
CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
============================================================
README.md
============================================================
# VideoVault

Generated by [CIaC](https://github.com/jrcalgo/ciac) — do not edit the
compiler-owned wiring by hand; regenerate it from the `.ciac` source
instead. Business logic lives in `app/services/`, which is yours.

## Run

```sh
uv sync
uv run uvicorn app.main:app --reload
```

Or bring up the full stack (API, Postgres):

```sh
docker compose up --build
```

## Test & lint

```sh
uv run pytest
uv run ruff check .
```

## Layout

| Path | Purpose | Owner |
|------|---------|-------|
| `app/main.py` | Application assembly | compiler |
| `app/api/` | HTTP routers (one per api) | compiler |
| `app/services/` | Business-logic handlers | **you** |
| `app/workers/` | Queue consumers and scheduled jobs | compiler |
| `app/config.py` | Environment-driven settings | compiler |
============================================================
app/__init__.py
============================================================
"""VideoVault — generated by CIaC. Structure is compiler-owned;
business logic belongs in `app/services/`."""
============================================================
app/api/__init__.py
============================================================
"""HTTP routers."""
============================================================
app/api/upload.py
============================================================
"""Request pipeline for `api Upload`. Generated by CIaC.

Pipeline: StoreVideo -> Notify -> Return
"""

from typing import Any

from fastapi import APIRouter, Depends
from sqlalchemy.ext.asyncio import AsyncSession

from app.db import get_session
from app.object_store import get_object_store
from app.schemas import Video
from app.logic.store_video import StoreVideo
from app.services.notify import Notify

router = APIRouter()


@router.post("/videos")
async def upload(
    payload: Video,
    session: AsyncSession = Depends(get_session),
) -> dict[str, Any]:
    result = payload

    result = await StoreVideo(session=session, object_store=get_object_store()).handle(result)
    result = await Notify().handle(result)
    return {"status": "accepted", "data": result.model_dump(mode="json")}
============================================================
app/config.py
============================================================
"""Runtime configuration for VideoVault. Generated by CIaC.

Every value can be overridden through the environment (or an `.env`
file): field names map to upper-cased variables, e.g. `DATABASE_URL`.
"""

from functools import lru_cache

from pydantic_settings import BaseSettings, SettingsConfigDict


class Settings(BaseSettings):
    """Environment-driven settings with development defaults."""

    model_config = SettingsConfigDict(env_file=".env", extra="ignore")

    database_url: str = "postgresql+asyncpg://postgres:postgres@localhost:5432/video_vault"

    s3_endpoint: str = "http://localhost:9000"
    s3_access_key: str = "minioadmin"
    s3_secret_key: str = "minioadmin"
    s3_bucket: str = "default"
    s3_region: str = "us-east-1"


@lru_cache
def get_settings() -> Settings:
    return Settings()
============================================================
app/db.py
============================================================
"""Async database access (SQLAlchemy + asyncpg). Generated by CIaC.

Engines are created lazily so importing the app never requires a running
database. Each named `db` instance from the `use { .. }` block gets its
own engine, sessionmaker, and FastAPI dependency.
"""

from collections.abc import AsyncIterator

from sqlalchemy.ext.asyncio import (
    AsyncEngine,
    AsyncSession,
    async_sessionmaker,
    create_async_engine,
)
from sqlalchemy.orm import DeclarativeBase

from app.config import get_settings


class Base(DeclarativeBase):
    """Declarative base for all models."""


def _urls() -> dict[str, str]:
    settings = get_settings()
    return {
        "default": settings.database_url,
    }


_engines: dict[str, AsyncEngine] = {}
_sessionmakers: dict[str, async_sessionmaker[AsyncSession]] = {}


def get_engine(instance: str = "default") -> AsyncEngine:
    if instance not in _engines:
        _engines[instance] = create_async_engine(_urls()[instance])
    return _engines[instance]


def get_sessionmaker(instance: str = "default") -> async_sessionmaker[AsyncSession]:
    if instance not in _sessionmakers:
        _sessionmakers[instance] = async_sessionmaker(
            get_engine(instance), expire_on_commit=False
        )
    return _sessionmakers[instance]


async def get_session() -> AsyncIterator[AsyncSession]:
    """FastAPI dependency yielding one `default` session per request."""
    async with get_sessionmaker("default")() as session:
        yield session


async def create_schema(instance: str = "default") -> None:
    """Creates CRUD-resource tables on startup. `table` declarations
    (v0.7) are provisioned by `run_migrations` instead, since they carry
    real incremental migrations rather than a create-if-absent call.
    """
    return


async def run_migrations(instance: str = "default") -> None:
    """Applies `app/migrations/*.sql` files not yet recorded, in filename
    order. Each file is generated by `ciac build`'s additive-only schema
    differ for `table` declarations and applied at most once, tracked in
    `_ciac_migrations`.
    """
    import pathlib

    from sqlalchemy import text

    migrations_dir = pathlib.Path(__file__).parent / "migrations"
    engine = get_engine(instance)
    async with engine.begin() as conn:
        await conn.execute(
            text(
                "CREATE TABLE IF NOT EXISTS _ciac_migrations ("
                "name TEXT PRIMARY KEY, applied_at TIMESTAMPTZ NOT NULL DEFAULT now())"
            )
        )
        result = await conn.execute(text("SELECT name FROM _ciac_migrations"))
        applied = {row[0] for row in result}

    for path in sorted(migrations_dir.glob("*.sql")):
        if path.name in applied:
            continue
        statements = [s.strip() for s in path.read_text().split(";\n") if s.strip()]
        async with engine.begin() as conn:
            for statement in statements:
                await conn.execute(text(statement))
            await conn.execute(
                text("INSERT INTO _ciac_migrations (name) VALUES (:name)"),
                {"name": path.name},
            )
============================================================
app/logic/__init__.py
============================================================
"""Compiler-owned typed-handler logic, lowered from `.ciac` handler bodies. Regenerated on every build; business logic lives in the `.ciac` source, not here."""
============================================================
app/logic/store_video.py
============================================================
"""Handler for the `StoreVideo` typed handler. Generated by CIaC.

Compiler-owned: lowered from the source `handler StoreVideo(..) { .. }` body
on every build. Business logic lives in the `.ciac` source, not here.
"""
from sqlalchemy.ext.asyncio import AsyncSession
from app.object_store import ObjectStore
from app.models import Videos
from app.schemas import Video


class StoreVideo:
    """Business logic for the `StoreVideo` handler."""

    def __init__(
        self,
        session: AsyncSession | None = None,
        object_store: ObjectStore | None = None,
    ) -> None:
        self.session = session
        self.object_store = object_store

    async def handle(self, v: Video) -> Video:
        (await self.object_store.put(("videos/" + str(v.id)), v.model_dump_json().encode()))
        self.session.add(Videos(**v.model_dump()))
        await self.session.commit()
        v1 = v
        if (v1.status == "Pending"):
            v2 = v1.model_copy(update={"status": "Ready"})
        else:
            v2 = v1
        return v2
============================================================
app/main.py
============================================================
"""Application assembly for VideoVault. Generated by CIaC."""

from collections.abc import AsyncIterator
from contextlib import asynccontextmanager

from fastapi import FastAPI

from app.api.upload import router as upload_router


@asynccontextmanager
async def lifespan(_: FastAPI) -> AsyncIterator[None]:
    from app.db import create_schema, run_migrations
    await create_schema()
    await run_migrations()
    yield


app = FastAPI(title="VideoVault", lifespan=lifespan)


@app.get("/health")
async def health() -> dict[str, str]:
    return {"status": "ok"}


app.include_router(upload_router)
============================================================
app/models.py
============================================================
"""Persistence models and API schemas for CRUD resources and `table`
declarations. Generated by CIaC.

Typed resources (`crud X: Record;`) get real columns from their record;
untyped ones keep a generic keyed-document model (UUID key + JSON
payload). `table <Name>: <Record>;` declarations (v0.7) get the same
column treatment, named after the table so a record reused under several
table names doesn't collide. Enums are stored as text.
"""


from sqlalchemy import String, Text
from sqlalchemy.orm import Mapped, mapped_column

from app.db import Base



class Videos(Base):
    __tablename__ = "videos"
    id: Mapped[str] = mapped_column(String(36), primary_key=True)
    title: Mapped[str] = mapped_column(Text)
    status: Mapped[str] = mapped_column(String(64))

============================================================
app/object_store.py
============================================================
"""S3 object storage clients. Generated by CIaC.

Each named `object_store` instance gets a lazy client (aioboto3).
Defaults target a local MinIO from the generated docker-compose; point
the `S3_*` environment variables at real S3 in production.
"""

from typing import Any

import aioboto3

from app.config import get_settings


class ObjectStore:
    """Async wrapper over one S3 bucket."""

    def __init__(self, endpoint: str, access_key: str, secret_key: str, bucket: str, region: str) -> None:
        self._session = aioboto3.Session()
        self._endpoint = endpoint
        self._access_key = access_key
        self._secret_key = secret_key
        self._region = region
        self.bucket = bucket

    def _client(self) -> Any:
        return self._session.client(
            "s3",
            endpoint_url=self._endpoint,
            aws_access_key_id=self._access_key,
            aws_secret_access_key=self._secret_key,
            region_name=self._region,
        )

    async def ensure_bucket(self) -> None:
        async with self._client() as s3:
            try:
                await s3.head_bucket(Bucket=self.bucket)
            except Exception:
                await s3.create_bucket(Bucket=self.bucket)

    async def put(self, key: str, body: bytes, content_type: str = "application/octet-stream") -> None:
        await self.ensure_bucket()
        async with self._client() as s3:
            await s3.put_object(Bucket=self.bucket, Key=key, Body=body, ContentType=content_type)

    async def get(self, key: str) -> bytes:
        async with self._client() as s3:
            response = await s3.get_object(Bucket=self.bucket, Key=key)
            return await response["Body"].read()

    async def delete(self, key: str) -> None:
        async with self._client() as s3:
            await s3.delete_object(Bucket=self.bucket, Key=key)

    async def presign_get(self, key: str, expires_s: int = 3600) -> str:
        async with self._client() as s3:
            return await s3.generate_presigned_url(
                "get_object",
                Params={"Bucket": self.bucket, "Key": key},
                ExpiresIn=expires_s,
            )


_stores: dict[str, ObjectStore] = {}


def get_object_store(instance: str = "default") -> ObjectStore:
    if instance not in _stores:
        settings = get_settings()
        _stores[instance] = {
            "default": lambda s=settings: ObjectStore(
                endpoint=s.s3_endpoint,
                access_key=s.s3_access_key,
                secret_key=s.s3_secret_key,
                bucket=s.s3_bucket,
                region=s.s3_region,
            ),
        }[instance]()
    return _stores[instance]
============================================================
app/schemas.py
============================================================
"""Data schemas from the program's `record` declarations. Generated by CIaC."""

from typing import Literal

from pydantic import BaseModel



class Video(BaseModel):
    id: str
    title: str
    status: Literal["Pending", "Ready"]


class NotFound(Exception):
    """Raised by `fail NotFound(..)` in a handler body."""

    def __init__(self, id: str) -> None:
        self.id = id
        super().__init__("NotFound(" + ", ".join(f"{k}={v!r}" for k, v in self.__dict__.items()) + ")")

============================================================
app/services/__init__.py
============================================================
"""Business-logic handlers. This is where your code goes."""
============================================================
app/services/notify.py
============================================================
"""Stub for the `Notify` handler declared `extern`. Generated by CIaC.

This file is yours: implement `handle` with your own logic. The
signature is compiler-owned and regenerated to match the `extern
handler Notify(..) -> ..;` declaration.
"""
from app.schemas import Video


class Notify:
    """Business logic for the `Notify` handler (extern)."""

    def __init__(
        self,
    ) -> None:
        pass

    async def handle(self, v: Video) -> Video:
        raise NotImplementedError
============================================================
conftest.py
============================================================
"""Pytest configuration. Generated by CIaC."""

import pytest


@pytest.fixture
def anyio_backend() -> str:
    return "asyncio"
============================================================
docker-compose.yml
============================================================
services:
  app:
    build: .
    ports:
      - "8000:8000"
    environment:
      DATABASE_URL: postgresql+asyncpg://postgres:postgres@db:5432/video_vault
      S3_ENDPOINT: http://minio:9000
    depends_on:
      - db
      - minio

  db:
    image: postgres:16
    ports:
      - "5432:5432"
    environment:
      POSTGRES_PASSWORD: postgres
      POSTGRES_DB: video_vault
    volumes:
      - db-data:/var/lib/postgresql/data

  minio:
    image: minio/minio
    command: ["server", "/data"]
    environment:
      MINIO_ROOT_USER: minioadmin
      MINIO_ROOT_PASSWORD: minioadmin
    volumes:
      - minio-data:/data

volumes:
  db-data:
  minio-data:
============================================================
pyproject.toml
============================================================
[project]
name = "video-vault"
version = "0.1.0"
description = "Generated by CIaC from `service VideoVault`"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "aioboto3>=13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "anyio>=4.4",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
# tests/system/ needs the compose stack up and is run only by
# `ciac verify --system` (from its own directory); plain `pytest`
# must never collect it.
norecursedirs = ["tests/system"]

[tool.ruff]
target-version = "py311"
============================================================
tests/test_logic_store_video.py
============================================================
"""Generated behavioral test for `StoreVideo`. Regenerated on every build.

Exercises the lowered handler body against mocked runtime dependencies;
real persistence round-trips are `ciac verify --live`'s job, not this test.
"""
import pytest
from unittest.mock import AsyncMock, MagicMock

from uuid import uuid4
from app.logic.store_video import StoreVideo
from app.schemas import Video


@pytest.mark.anyio
async def test_store_video_handle() -> None:
    session = AsyncMock()
    session.add = MagicMock()
    object_store = AsyncMock()
    handler = StoreVideo(session=session, object_store=object_store)

    result = await handler.handle(Video(id=str(uuid4()), title="test", status="Pending"))

    assert isinstance(result, Video)
    session.add.assert_called_once()
    session.commit.assert_awaited_once()
    object_store.put.assert_awaited_once()
============================================================
tests/test_smoke.py
============================================================
"""Smoke tests generated by CIaC.

These run without any infrastructure: clients are lazy and the ASGI
transport below does not trigger the startup lifespan.
"""

import httpx
import pytest

from app.main import app


def _client() -> httpx.AsyncClient:
    transport = httpx.ASGITransport(app=app)
    return httpx.AsyncClient(transport=transport, base_url="http://test")


def test_routes_registered() -> None:
    paths = set(app.openapi()["paths"])
    assert "/videos" in paths
    assert "/health" in paths


@pytest.mark.anyio
async def test_health() -> None:
    async with _client() as client:
        response = await client.get("/health")
    assert response.status_code == 200
    assert response.json() == {"status": "ok"}
