tests/tests/snapshots/golden__gen__python__video-platform.snap
---
source: tests/tests/golden.rs
expression: project_dump(&project)
---
============================================================
Dockerfile
============================================================
FROM python:3.12-slim

WORKDIR /srv

COPY pyproject.toml ./
RUN pip install --no-cache-dir uv && uv pip install --system -r pyproject.toml

COPY app ./app

EXPOSE 8000
CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
============================================================
README.md
============================================================
# VideoPlatform

Generated by [CIaC](https://github.com/jrcalgo/ciac) — do not edit the
compiler-owned wiring by hand; regenerate it from the `.ciac` source
instead. Business logic lives in `app/services/`, which is yours.

## Run

```sh
uv sync
uv run uvicorn app.main:app --reload
```

Workers and scheduled jobs run separately:

```sh
uv run python -m app.workers
```

Or bring up the full stack (API, workers/jobs, Postgres, Redis, NATS):

```sh
docker compose up --build
```

## Test & lint

```sh
uv run pytest
uv run ruff check .
```

## Layout

| Path | Purpose | Owner |
|------|---------|-------|
| `app/main.py` | Application assembly | compiler |
| `app/api/` | HTTP routers (one per api) | compiler |
| `app/services/` | Business-logic handlers | **you** |
| `app/workers/` | Queue consumers and scheduled jobs | compiler |
| `app/config.py` | Environment-driven settings | compiler |

Requests to protected routes need a bearer token signed with
`JWT_SECRET` (default `change-me`, algorithm HS256).
============================================================
app/__init__.py
============================================================
"""VideoPlatform — generated by CIaC. Structure is compiler-owned;
business logic belongs in `app/services/`."""
============================================================
app/api/__init__.py
============================================================
"""HTTP routers."""
============================================================
app/api/upload.py
============================================================
"""Request pipeline for `api Upload`. Generated by CIaC.

Pipeline: Auth -> StoreVideo -> publish video_platform.events -> Return
"""

from typing import Any

from fastapi import APIRouter, Depends
from sqlalchemy.ext.asyncio import AsyncSession

from app.auth import require_auth
from app.cache import get_cache
from app.db import get_session
from app.queue import publish
from app.services.store_video import StoreVideo

router = APIRouter()


@router.post("/upload")
async def upload(
    payload: dict[str, Any],
    claims: dict[str, Any] = Depends(require_auth),
    session: AsyncSession = Depends(get_session),
) -> dict[str, Any]:
    result: dict[str, Any] = dict(payload)
    result["subject"] = claims.get("sub")

    result = await StoreVideo(session=session, cache=get_cache()).handle(result)
    await publish("video_platform.events", result)
    return {"status": "accepted", "data": result}
============================================================
app/auth.py
============================================================
"""JWT authentication. Generated by CIaC.

`Auth` pipeline steps become a FastAPI dependency that verifies the
bearer token and hands the verified claims to the route.
"""

from typing import Any

import jwt
from fastapi import Depends, HTTPException, status
from fastapi.security import HTTPAuthorizationCredentials, HTTPBearer

from app.config import get_settings

_bearer = HTTPBearer()


async def require_auth(
    credentials: HTTPAuthorizationCredentials = Depends(_bearer),
) -> dict[str, Any]:
    """Verifies the request's bearer token and returns its claims."""
    settings = get_settings()
    try:
        return jwt.decode(
            credentials.credentials,
            settings.jwt_secret,
            algorithms=[settings.jwt_algorithm],
        )
    except jwt.InvalidTokenError as exc:
        raise HTTPException(
            status_code=status.HTTP_401_UNAUTHORIZED,
            detail="invalid or expired token",
        ) from exc


def require_scope(scope: str):
    """Builds a dependency that verifies a JWT contains `scope`."""

    async def dependency(claims: dict[str, Any] = Depends(require_auth)) -> dict[str, Any]:
        scopes = claims.get("scope", claims.get("scp", ""))
        if isinstance(scopes, str):
            granted = set(scopes.split())
        elif isinstance(scopes, list):
            granted = {str(item) for item in scopes}
        else:
            granted = set()
        if scope not in granted:
            raise HTTPException(
                status_code=status.HTTP_403_FORBIDDEN,
                detail="missing required scope",
            )
        return claims

    return dependency
============================================================
app/cache.py
============================================================
"""Redis cache clients. Generated by CIaC.

Clients are created lazily and Redis only connects on first use, so
importing the app never requires a running cache. Each named `cache`
instance gets its own client.
"""

import redis.asyncio as redis

from app.config import get_settings


def _urls() -> dict[str, str]:
    settings = get_settings()
    return {
        "default": settings.redis_url,
    }


_clients: dict[str, redis.Redis] = {}


def get_cache(instance: str = "default") -> redis.Redis:
    if instance not in _clients:
        _clients[instance] = redis.Redis.from_url(
            _urls()[instance], decode_responses=True
        )
    return _clients[instance]
============================================================
app/config.py
============================================================
"""Runtime configuration for VideoPlatform. Generated by CIaC.

Every value can be overridden through the environment (or an `.env`
file): field names map to upper-cased variables, e.g. `DATABASE_URL`.
"""

from functools import lru_cache

from pydantic_settings import BaseSettings, SettingsConfigDict


class Settings(BaseSettings):
    """Environment-driven settings with development defaults."""

    model_config = SettingsConfigDict(env_file=".env", extra="ignore")

    database_url: str = "postgresql+asyncpg://postgres:postgres@localhost:5432/video_platform"

    redis_url: str = "redis://localhost:6379/0"
    nats_url: str = "nats://localhost:4222"

    jwt_secret: str = "change-me"
    jwt_algorithm: str = "HS256"


@lru_cache
def get_settings() -> Settings:
    return Settings()
============================================================
app/db.py
============================================================
"""Async database access (SQLAlchemy + asyncpg). Generated by CIaC.

Engines are created lazily so importing the app never requires a running
database. Each named `db` instance from the `use { .. }` block gets its
own engine, sessionmaker, and FastAPI dependency.
"""

from collections.abc import AsyncIterator

from sqlalchemy.ext.asyncio import (
    AsyncEngine,
    AsyncSession,
    async_sessionmaker,
    create_async_engine,
)
from sqlalchemy.orm import DeclarativeBase

from app.config import get_settings


class Base(DeclarativeBase):
    """Declarative base for all models."""


def _urls() -> dict[str, str]:
    settings = get_settings()
    return {
        "default": settings.database_url,
    }


_engines: dict[str, AsyncEngine] = {}
_sessionmakers: dict[str, async_sessionmaker[AsyncSession]] = {}


def get_engine(instance: str = "default") -> AsyncEngine:
    if instance not in _engines:
        url = _urls()[instance]
        _engines[instance] = create_async_engine(url)
    return _engines[instance]


def get_sessionmaker(instance: str = "default") -> async_sessionmaker[AsyncSession]:
    if instance not in _sessionmakers:
        _sessionmakers[instance] = async_sessionmaker(
            get_engine(instance), expire_on_commit=False
        )
    return _sessionmakers[instance]


async def get_session() -> AsyncIterator[AsyncSession]:
    """FastAPI dependency yielding one `default` session per request."""
    async with get_sessionmaker("default")() as session:
        yield session


async def create_schema(instance: str = "default") -> None:
    """Creates CRUD-resource tables on startup. `table` declarations
    (v0.7) are provisioned by `run_migrations` instead, since they carry
    real incremental migrations rather than a create-if-absent call.
    """
    return

============================================================
app/main.py
============================================================
"""Application assembly for VideoPlatform. Generated by CIaC."""

from collections.abc import AsyncIterator
from contextlib import asynccontextmanager

from fastapi import FastAPI

from app.api.upload import router as upload_router


@asynccontextmanager
async def lifespan(_: FastAPI) -> AsyncIterator[None]:
    from app.db import create_schema
    await create_schema()
    yield


app = FastAPI(title="VideoPlatform", lifespan=lifespan)


@app.get("/health")
async def health() -> dict[str, str]:
    return {"status": "ok"}


app.include_router(upload_router)
============================================================
app/queue.py
============================================================
"""NATS queue access. Generated by CIaC.

`publish` pipeline steps send JSON payloads to their stream's subject;
workers consume their bound stream in per-worker queue groups (see
`app/workers/`). The connection is established lazily on first publish.
"""

import json
from typing import Any

import nats
from nats.aio.client import Client

from app.config import get_settings

_client: Client | None = None


async def get_client() -> Client:
    global _client
    if _client is None or _client.is_closed:
        _client = await nats.connect(get_settings().nats_url)
    return _client


async def publish(subject: str, payload: dict[str, Any]) -> None:
    client = await get_client()
    await client.publish(subject, json.dumps(payload).encode())
============================================================
app/services/__init__.py
============================================================
"""Business-logic handlers. This is where your code goes."""
============================================================
app/services/save_result.py
============================================================
"""Handler for the `SaveResult` pipeline step. Generated by CIaC.

This file is yours: the compiler wires `SaveResult` into its
pipelines, and you implement the business logic in `handle`.
"""

from typing import Any

from redis.asyncio import Redis
from sqlalchemy.ext.asyncio import AsyncSession



class SaveResult:
    """Business logic for the `SaveResult` step.

    Capability bindings:
    - db: default
    - cache: default
    """

    def __init__(
        self,
        session: AsyncSession | None = None,
        cache: Redis | None = None,
    ) -> None:
        self.session = session
        self.cache = cache

    async def handle(self, payload: dict[str, Any]) -> dict[str, Any]:
        # TODO: implement the SaveResult step.
        return payload
============================================================
app/services/store_video.py
============================================================
"""Handler for the `StoreVideo` pipeline step. Generated by CIaC.

This file is yours: the compiler wires `StoreVideo` into its
pipelines, and you implement the business logic in `handle`.
"""

from typing import Any

from redis.asyncio import Redis
from sqlalchemy.ext.asyncio import AsyncSession



class StoreVideo:
    """Business logic for the `StoreVideo` step.

    Capability bindings:
    - db: default
    - cache: default
    """

    def __init__(
        self,
        session: AsyncSession | None = None,
        cache: Redis | None = None,
    ) -> None:
        self.session = session
        self.cache = cache

    async def handle(self, payload: dict[str, Any]) -> dict[str, Any]:
        # TODO: implement the StoreVideo step.
        return payload
============================================================
app/services/transcode.py
============================================================
"""Handler for the `Transcode` pipeline step. Generated by CIaC.

This file is yours: the compiler wires `Transcode` into its
pipelines, and you implement the business logic in `handle`.
"""

from typing import Any

from redis.asyncio import Redis
from sqlalchemy.ext.asyncio import AsyncSession



class Transcode:
    """Business logic for the `Transcode` step.

    Capability bindings:
    - db: default
    - cache: default
    """

    def __init__(
        self,
        session: AsyncSession | None = None,
        cache: Redis | None = None,
    ) -> None:
        self.session = session
        self.cache = cache

    async def handle(self, payload: dict[str, Any]) -> dict[str, Any]:
        # TODO: implement the Transcode step.
        return payload
============================================================
app/workers/__init__.py
============================================================
"""Queue-driven workers and scheduled jobs. Run them all with `python -m app.workers`."""
============================================================
app/workers/__main__.py
============================================================
"""Runs every worker in one process: `python -m app.workers`. Generated by CIaC."""

import asyncio

from app.workers import (
    transcoder,
)


async def main() -> None:
    await asyncio.gather(
        transcoder.run(),
    )


if __name__ == "__main__":
    asyncio.run(main())
============================================================
app/workers/transcoder.py
============================================================
"""Worker pipeline for `worker Transcoder`. Generated by CIaC.

Consumes `video_platform.events` in queue group `transcoder`
so replicas of this worker load-balance messages between them.
"""

import asyncio
import logging
import json
from typing import Any


import nats

from app.config import get_settings
from app.cache import get_cache
from app.db import get_sessionmaker
from app.services.transcode import Transcode
from app.services.save_result import SaveResult

SUBJECT = "video_platform.events"
QUEUE_GROUP = "transcoder"
CONCURRENCY = 1
MAX_RETRIES = 0
logger = logging.getLogger(__name__)



async def handle_message_once(payload: dict[str, Any]) -> None:
    result = dict(payload)
    async with get_sessionmaker()() as session:

        result = await Transcode(session=session, cache=get_cache()).handle(result)
        result = await SaveResult(session=session, cache=get_cache()).handle(result)


async def handle_message(payload: dict[str, Any]) -> None:
    for attempt in range(MAX_RETRIES + 1):
        try:
            await handle_message_once(payload)
            return
        except Exception:
            if attempt >= MAX_RETRIES:
                logger.exception("message processing failed after retries")
                return
            logger.warning("message processing failed; retrying", exc_info=True)


async def _consume(worker_index: int) -> None:
    client = await nats.connect(get_settings().nats_url)
    subscription = await client.subscribe(SUBJECT, queue=QUEUE_GROUP)
    logger.info("worker Transcoder consumer %s subscribed", worker_index)
    async for message in subscription.messages:
        await handle_message(json.loads(message.data))


async def run() -> None:
    """Subscribes and processes messages forever."""
    await asyncio.gather(*(_consume(idx) for idx in range(CONCURRENCY)))
============================================================
conftest.py
============================================================
"""Pytest configuration. Generated by CIaC."""

import pytest


@pytest.fixture
def anyio_backend() -> str:
    return "asyncio"
============================================================
docker-compose.yml
============================================================
services:
  app:
    build: .
    ports:
      - "8000:8000"
    environment:
      DATABASE_URL: postgresql+asyncpg://postgres:postgres@db:5432/video_platform
      REDIS_URL: redis://cache:6379/0
      NATS_URL: nats://queue:4222
      JWT_SECRET: ${JWT_SECRET:-change-me}
    depends_on:
      - db
      - cache
      - queue

  workers:
    build: .
    command: ["python", "-m", "app.workers"]
    environment:
      DATABASE_URL: postgresql+asyncpg://postgres:postgres@db:5432/video_platform
      REDIS_URL: redis://cache:6379/0
      NATS_URL: nats://queue:4222
    depends_on:
      - db
      - cache
      - queue

  db:
    image: postgres:16
    ports:
      - "5432:5432"
    environment:
      POSTGRES_PASSWORD: postgres
      POSTGRES_DB: video_platform
    volumes:
      - db-data:/var/lib/postgresql/data

  cache:
    image: redis:7
    ports:
      - "6379:6379"

  queue:
    image: nats:2
    # Host mapping (v0.13 M2): the generated tests/system delivery and
    # channel tests connect from the host at localhost:4222.
    ports:
      - "4222:4222"

volumes:
  db-data:
============================================================
pyproject.toml
============================================================
[project]
name = "video-platform"
version = "0.1.0"
description = "Generated by CIaC from `service VideoPlatform`"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "redis>=5.0",
    "nats-py>=2.7",
    "pyjwt>=2.8",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "anyio>=4.4",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
# tests/system/ needs the compose stack up and is run only by
# `ciac verify --system` (from its own directory); plain `pytest`
# must never collect it.
norecursedirs = ["tests/system"]

[tool.ruff]
target-version = "py311"
============================================================
tests/test_smoke.py
============================================================
"""Smoke tests generated by CIaC.

These run without any infrastructure: clients are lazy and the ASGI
transport below does not trigger the startup lifespan.
"""

import httpx
import pytest

from app.main import app


def _client() -> httpx.AsyncClient:
    transport = httpx.ASGITransport(app=app)
    return httpx.AsyncClient(transport=transport, base_url="http://test")


def test_routes_registered() -> None:
    paths = set(app.openapi()["paths"])
    assert "/upload" in paths
    assert "/health" in paths


@pytest.mark.anyio
async def test_health() -> None:
    async with _client() as client:
        response = await client.get("/health")
    assert response.status_code == 200
    assert response.json() == {"status": "ok"}


@pytest.mark.anyio
async def test_upload_requires_auth() -> None:
    async with _client() as client:
        response = await client.post("/upload", json={})
    assert response.status_code in (401, 403)
